--- a/website/package.json
+++ b/website/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "learn-d3",
+  "name": "mfl-inequality-map",
   "version": "1.0.0",
   "description": "Basic D3.js project for learning purposes",
   "main": "src/app.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --hot --inline --progress",
-    "build": "webpack -p --config webpack.prod.config.js --hide-modules"
+    "start": "webpack-dev-server --model development --hot",
+    "dev": "webpack --mode development ./src/app.js --output ./dist/app.bundle.js",
+    "build": "webpack --mode production ./src/app.js --output ./dist/app.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -27,15 +28,20 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "node-sass": "^4.5.3",
+    "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack": "^4",
+    "webpack-cli": "^3",
+    "webpack-dev-server": "^3",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "d3": "^5"
+    "d3": "^5.9.2",
+    "tar": "^4.4.8"
   }
 }
