--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.gitignore.io/api/linux,macos,python,jupyternotebook,jupyternotebooks,r
 # Edit at https://www.gitignore.io/?templates=linux,macos,python,jupyternotebook,jupyternotebooks,r
 
+*.pem
+
 ### JupyterNotebook ###
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
